fix: Correct homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.com/dm0d21200/vite",
+  "homepage": "https://github.com/dm0d21200/vite/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
