--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,14 @@
   "name": "Vite - Language Learning Game",
   "short_name": "Vite",
   "description": "A fun language learning game for kids with pictures and multiple choice questions",
-  "start_url": "/",
+  "start_url": "./",
   "display": "fullscreen",
   "orientation": "any",
   "background_color": "#667eea",
   "theme_color": "#764ba2",
   "icons": [
     {
-      "src": "/vite.svg",
+      "src": "./vite.svg",
       "sizes": "any",
       "type": "image/svg+xml"
     }
